fix: add padding to make the outline visible

--- a/src/components/Header/NavigationList/NavigationList.module.scss
+++ b/src/components/Header/NavigationList/NavigationList.module.scss
@@ -24,6 +24,7 @@
   display: flex;
   flex-direction: row;
   gap: 1.5rem;
+  padding: 1.5px;
   overflow: hidden;
 
   @media (max-width: 800px) {
